# mwclient-templating

./: .gitignore  README.md  pyproject.toml
mwclient_templating/: __init__.py  parser.py  patch.py
tests/: test_templating.py
